Document API authentication in Swagger
